# sparkcheck

./: .flake8  .gitignore  .pre-commit-config.yaml  __init__.py  coverage.txt  proto.py  pyproject.toml  readme.md  setup.py  tox.ini
.github/workflows/: ci.yml  linting.yml  sphinx.yml  testing.yml  testing_os.yml  testing_py_version.yml  testing_spark.yml
docs/: conf.py  index.rst  modules.rst  sparkchecker.bin.rst  sparkchecker.ext.rst  sparkchecker.module.rst  sparkchecker.rst
examples/: airline.csv  check_df.yaml  expectations_airline.yaml  proto.py
src/: __init__.py  proto.py
src/sparkchecker/: __init__.py  _cols_utils.py  _constants.py  _dataframe_utils.py  _exceptions.py  _utils.py  app.py  constants.py  sparkchecker.py
src/sparkchecker/ext/: _decorators.py  _exceptions.py  _logger.py  _utils.py
src/sparkchecker/module/: __init__.py  sparkchecker.py
tests/: conftest.py
tests/ext/: test_decorators.py  test_utils.py
