[build-system]
requires = ["setuptools", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "sparkchecker"
version = "0.0.1"
description = "Run Data Validation on a Spark DataFrame"
readme = "README.md"
authors = [{ name = "Skander Boudawara" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"
dependencies = ["PyYaml >= 6.0.2", "pyspark >= 3.3"]


[project.optional-dependencies]
test = ["pytest-cov >= 6.0.0", "pytest >= 6.0.0"]

lint = [
    "types-PyYAML >= 6.0.0",
    "pre-commit",
    "flake8 >= 7.0.0",
    "flake8-docstrings >= 1.6.0",
    "flake8-rst-docstrings >= 0.3.0",
    "black >= 24.10.0",
    "tox >= 4.23.2",
    "ruff >= 0.9.0",
    "mypy >= 1.14.1",
]

docs = [
    "packaging",
    "Sphinx >= 7",
    "sphinx-autodoc-typehints >= 1.2.0",
    "sphinx-rtd-theme >= 1.3.0",
]

[tool.black]
line-length = 79

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py", "*/test_*", "*/_exceptions.py", "*/_logger.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

fail_under = 100

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "-vv", "-p", "no:warnings", "--tb=short"]

pythonpath = ["src"]
testpaths = ["."]
xfail_strict = true
filterwarnings = ["error"]
python_files = "test_*.py"
log_cli = true
log_cli_level = "INFO"
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
lint.select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "B",
    "Q",
    "D",
    "UP",
    "ANN",
    "S",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "T20",
    "PYI",
    "PT",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "INT",
    "ARG",
    "TD",
    "FIX",
    "ERA",
    "PL",
    "PERF",
    "RUF",
]

lint.ignore = [
    "PYI041",
    "A002",
    "D401",
    "N812",
    "FA100",
    "E203",
    "E202",
    "D200",
    "D404",
    "D104",
    "D212",
    "D415",
    "D205",
    "PLR0913",
    "D107",
    "B023",
    "RET504",
    "E271",
    "PLR0917",
    "PLR6301",
    "PLR0904",
    "N818",
    "D203",
    "E241",
    "PLR0915",
    "PLR0914",
    "C901",
    "PLR0912",
    "PLR0911",
    "PLC0206",
    "PLC2701",
    "ANN401",
]


lint.fixable = ["ALL"]
lint.exclude = ["*conftest.py", "docs*"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
output-format = "grouped"
preview = true
fix = true
show-fixes = true
line-length = 79

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
default-section = "third-party"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
from-first = false
lines-between-types = 0
known-third-party = ["pyspark"]
known-local-folder = ["src"]

[tool.ruff.lint.per-file-ignores]
"*bin*" = ["INP001"]
"test_*.py" = [
    "E501",
    "ANN001",
    "D101",
    "D102",
    "D103",
    "PT001",
    "ARG001",
    "N803",
    "N802",
    "ANN201",
    "ANN202",
    "ANN204",
    "D100",
    "RET504",
    "DTZ005",
    "DTZ007",
    "DTZ002",
    "N806",
    "DTZ001",
    "ARG002",
    "D106",
    "PLR0914",
    "S101",
    "PT004",
    "ANN002",
    "ANN003",
    "ANN206",
    "N801",
    "ARG003",
    "E402",
    "SLF001",
]

[tool.mypy]
mypy_path = "src"
strict = false
files = "src"
exclude = [
    "(^|/)(test.*)$",
    ".*conftest.*",
    "(^|/)(__init__/.*py)$",
    ".*jobs.*",
]

pretty = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["pyspark.*"]
ignore_missing_imports = true
